--- a/css/defaults.css
+++ b/css/defaults.css
@@ -1,6 +1,6 @@
 :root {
-  --ff-prim: "Norse", serif;
-  --ff-sec: "Raleway", serif;
+  --ff-prim: "Macondo Swash Caps", serif;
+  --ff-sec: "Itim", serif;
 
   --fw-reg: 400;
   --fw-bold: 700;
@@ -59,6 +59,14 @@ body {
   color: var(--color-white);
   margin: 0;
   padding: 0;
+}
+
+section {
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 img {
