--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,12 @@
 /* Intro Page */
+
+.container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+  align-items: center;
+}
 .hero-intro {
   margin: 0;
   padding: 0;
@@ -23,21 +31,9 @@
 }
 
 .intro-img {
-  width: 100%;
-  position: relative;
+  max-width: 100%;
+  height: auto;
   overflow: hidden;
-}
-
-.intro-img::before {
-  content: "";
-  position: absolute;
-  left: -6.1em;
-  top: 50%;
-  transform: translateY(-50%) rotate(-20deg);
-  background: var(--color-dark);
-  width: 40%;
-  height: 140%;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
 }
 
 /* header */
