--- a/css/defaults.css
+++ b/css/defaults.css
@@ -7,10 +7,10 @@
 
   --color-white: #fff;
   --color-dark: #171717;
-  --color-secondary: #383433;
-  --color-light: #3999089;
-  --color-accent1: #ffa050;
-  --color-accent2: #b99a7e;
+  --color-secondary: #383433; /*dark brown*/
+  --color-light: #999089; /*light grey*/
+  --color-accent1: #ffa050; /*orange*/
+  --color-accent2: #b99a7e; /*sand*/
 
   --fs-h1: 3rem;
   --fs-h2: 2.25rem;
@@ -29,13 +29,13 @@
 }
 
 @media (min-width: 800px) {
-  :root {
+  /* :root {
     --fs-h1: 8rem;
     --fs-h2: 3rem;
     --fs-h3: 2.5rem;
     --fs-h4: 1.5rem;
     --fs-body: 1.125rem;
-  }
+  } */
 }
 
 /* General styles */
@@ -124,105 +124,6 @@ h3 {
 h4 {
   font-size: var(--fs-h4);
 }
-
-/* NAV */
-.nav {
-  position: fixed;
-  background: var(--color-dark);
-  color: var(--color-light);
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 100;
-
-  transform: translateX(100%);
-  transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
-}
-
-.nav__list {
-  list-style: none;
-  display: flex;
-  height: 100%;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-}
-
-.nav__link {
-  color: inherit;
-  font-weight: var(--fw-bold);
-  font-size: var(--fs-h2);
-  text-decoration: none;
-}
-
-.nav__link:hover {
-  color: var(--color-accent);
-}
-
-.nav-toggle {
-  padding: 0.5em;
-  background: transparent;
-  border: 0;
-  cursor: pointer;
-  position: absolute;
-  right: 1em;
-  top: 1em;
-  z-index: 1000;
-}
-
-.nav-open .nav {
-  transform: translateX(0);
-}
-
-.nav-open .nav-toggle {
-  position: fixed;
-}
-
-.nav-open .hamburger {
-  transform: rotate(0.625turn);
-}
-
-.nav-open .hamburger::before {
-  transform: rotate(90deg) translateX(-6px);
-}
-
-.nav-open .hamburger::after {
-  opacity: 0;
-}
-
-.hamburger {
-  display: block;
-  position: relative;
-}
-
-.hamburger,
-.hamburger::before,
-.hamburger::after {
-  background: var(--color-accent);
-  width: 2em;
-  height: 3px;
-  border-radius: 1em;
-  transition: transform 250ms ease-in-out;
-}
-
-.hamburger::before,
-.hamburger::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-}
-
-.hamburger::before {
-  top: 6px;
-}
-.hamburger::after {
-  bottom: 6px;
-}
-
 
 @media screen and (max-width: 480px) {
 }
