--- a/css/menu.css
+++ b/css/menu.css
@@ -118,7 +118,6 @@ body {
 .menu-name {
   font-size: var(--fs-h2);
   font-family: var(--ff-prim);
-  margin-bottom: 5px;
 }
 
 .menu-slogan {
@@ -181,11 +180,8 @@ body {
 .menu-grid {
   display: flex;
   flex-wrap: wrap;
-  padding: 3rem 1rem;
   justify-content: center;
-  max-width: 1400px;
   width: 100%;
-  margin: 0 auto;
 }
 
 .menu-card {
@@ -202,7 +198,7 @@ body {
 }
 
 .card-popup-box div {
-  color: var(--color-light);
+  color: var(--color-secondary);
   font-size: 0.8125rem;
   line-height: 1.63;
   letter-spacing: 1.63px;
@@ -214,7 +210,7 @@ body {
 
 .card-popup-box h3 {
   pointer-events: none;
-  color: var(--color-accent2);
+  color: var(--color-secondary);
   font-size: 1.3125rem;
   letter-spacing: -0.5px;
   font-weight: 700;
@@ -222,20 +218,13 @@ body {
 }
 
 .card-popup-box {
-  position: absolute;
-  bottom: 0;
-  left: 20px;
-  right: 20px;
-  transition: 0.4s;
-  z-index: 1;
-  padding: 1.25rem 1.875rem;
-  opacity: 0;
+  padding: var(--size18);
 }
 
 .card-popup-box::before {
   position: absolute;
   content: "";
-  background: var(--color-white);
+  background: var(--color-accent2);
   top: 0;
   left: 0;
   right: 0;
