--- a/css/menu.css
+++ b/css/menu.css
@@ -239,3 +239,104 @@ body {
   opacity: 1;
   cursor: pointer;
 }
+
+/* Popup Modals */
+.modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--color-light);
+  cursor: pointer;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 1rem;
+  transition: all 0.35s ease-in;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 50;
+  background-color: transparent;
+}
+
+.modal-dialog {
+  max-width: 800px;
+  max-height: 50vh;
+  background: var(--color-light);
+  overflow: hidden;
+  padding: 1.25rem 1.85rem;
+  border-radius: 8px;
+  cursor: default;
+}
+
+.modal-dialog .modal-header h3 {
+  color: var(--color-secondary);
+}
+
+.modal-header {
+  display: flex;
+  padding-bottom: 1rem;
+  justify-content: space-between;
+}
+
+.modal-header .fa-times {
+  font-size: 1.5rem;
+  transition: all 0.5s ease-in;
+  color: var(--color-accent1);
+}
+
+.modal-header .fa-times:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.full-site-model.is-visible,
+.modal.is-visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal-body {
+  display: flex;
+  align-items: center;
+  color: var(--color-dark);
+}
+
+.modal-body .img-wrapper {
+  max-width: 200px;
+  margin-right: 0.75rem;
+}
+
+.img-wrapper img {
+  width: 100%;
+  border-radius: 8px;
+  object-fit: cover;
+  height: 200px;
+}
+
+.text-wrapper > strong {
+  margin: 0;
+}
+
+[data-animation="slideInOutTop"] .modal-dialog {
+  opacity: 0;
+  transition: all 0.5s;
+}
+
+[data-animation="slideInOutTop"].is-visible .modal-dialog {
+  opacity: 1;
+  transition-delay: 0.2s;
+}
+
+[data-animation="slideInOutTop"] .modal-dialog {
+  transform: translateY(-100%);
+}
+
+[data-animation="zoomInOut"].is-visible,
+[data-animation="slideInOutTop"].is-visible .modal-dialog {
+  transform: none;
+}
