--- a/css/menu.css
+++ b/css/menu.css
@@ -114,6 +114,9 @@ body {
   width: 50px;
   height: 50px;
 }
+.menu-title .logo {
+  margin-top: 5px;
+}
 
 .menu-name {
   font-size: var(--fs-h2);
@@ -156,12 +159,11 @@ body {
 /* Menu Nav */
 .menu-filter-nav {
   display: flex;
-  flex-wrap: wrap;
   padding: 1rem 0;
 }
 
 .menu-filter-nav .filter-link {
-  padding: 0 1rem;
+  padding-right: 1rem;
   font-size: 0.8125rem;
   line-height: 1.6;
   letter-spacing: 1.63px;
