moble responsive css
converted px to rem

--- a/css/menu.css
+++ b/css/menu.css
@@ -32,7 +32,7 @@
 }
 
 .nav__link:hover {
-  color: var(--color-accent);
+  color: var(--color-light);
 }
 
 .nav-toggle {
@@ -74,9 +74,9 @@
 .hamburger,
 .hamburger::before,
 .hamburger::after {
-  background: var(--color-accent);
+  background: var(--color-light);
   width: 2em;
-  height: 3px;
+  height: 0.188rem;
   border-radius: 1em;
   transition: transform 250ms ease-in-out;
 }
@@ -90,10 +90,10 @@
 }
 
 .hamburger::before {
-  top: 6px;
+  top: 0.375rem;
 }
 .hamburger::after {
-  bottom: 6px;
+  bottom: 0.375rem;
 }
 
 /* Menu */
@@ -103,19 +103,19 @@ body {
 
 .site-wrapper {
   width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 0.938rem;
+  padding-right: 0.938rem;
   margin-left: auto;
   margin-right: auto;
 }
 
 /* Menu Heading */
 .logo {
-  width: 50px;
-  height: 50px;
+  width: 3.125rem;
+  height: 3.125rem;
 }
 .menu-title .logo {
-  margin-top: 5px;
+  margin-top: 0.313rem;
 }
 
 .menu-name {
@@ -150,9 +150,9 @@ body {
 
 .search-container .fa-magnifying-glass {
   position: absolute;
-  right: 10px;
+  right: var(--size10);
   color: var(--color-dark);
-  padding-right: 10px;
+  padding-right: var(--size10);
   cursor: pointer;
 }
 
@@ -197,7 +197,7 @@ body {
   width: 100%;
   height: 255px;
   object-fit: cover;
-  border-radius: 8px;
+  border-radius: 0.5rem;
 }
 
 .card-popup-box h3,
@@ -216,7 +216,7 @@ body {
 .card-popup-box .tap {
   color: var(--color-secondary);
   letter-spacing: -0.5px;
-  font-size: 14px;
+  font-size: var(--size14);
 }
 
 .tap {
@@ -235,8 +235,8 @@ body {
   text-decoration: underline;
 }
 .tap .fa-circle {
-  font-size: 5px;
-  padding: 0 10px;
+  font-size: 0.3rem;
+  padding: 0 var(--size10);
 }
 
 .card-popup-box {
@@ -253,11 +253,11 @@ body {
   bottom: 0;
   z-index: -1;
   opacity: 0.9;
-  border-radius: 8px;
+  border-radius: 0.5rem;
 }
 
 .menu-card:hover .card-popup-box {
-  bottom: 20px;
+  bottom: var(--size20);
   opacity: 1;
   cursor: pointer;
 }
@@ -290,7 +290,7 @@ body {
   background: var(--color-light);
   overflow: hidden;
   padding: 1.25rem 1.85rem;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   cursor: default;
 }
 
@@ -330,15 +330,15 @@ body {
 
 .img-wrapper img {
   width: 100%;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   object-fit: cover;
   height: 240px;
 }
 
 .text-wrapper {
   border: 1px solid var(--color-secondary);
-  margin: 10px auto;
-  padding: 5px;
+  margin: var(--size10) auto;
+  padding: 0.3rem;
 }
 
 .text-wrapper h3 {
